# Reveal3dEngine

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  Reveal3d.sln  imgui.ini
Design/: BUGS.md  DONE.md  In Progress.md  PRIO.md  TODO.md
Design/.obsidian/: community-plugins.json  graph.json  workspace.json
Design/Engine/: Esquema.md  TODOs lists.canvas
Design/Excalidraw/: Drawing 2024-02-27 18.37.44.excalidraw.md  Drawing 2024-02-27 18.38.30.excalidraw.md  Drawing 2024-02-27 18.39.05.excalidraw.md
Editor/: App.xaml  App.xaml.cs  AssemblyInfo.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  Reveal3dEditor.csproj
Editor/Dictionaries/: ColorPalette.xaml  Controls.xaml  Controls.xaml.cs
Editor/DllWrapper/: EngineAPI.cs
Editor/Models/: Project.cs
Editor/Util/: Constants.cs  RelayCommand.cs  Serializer.cs  UndoRedo.cs
Editor/ViewModel/: ProjectsDialogViewModel.cs  RendererHostViewModel.cs
Editor/Views/UserControls/: BottomBarView.xaml  BottomBarView.xaml.cs  FloatingWindowView.xaml  FloatingWindowView.xaml.cs  RendererHostView.xaml  RendererHostView.xaml.cs  TitleBarView.xaml  TitleBarView.xaml.cs  WorldEditorView.xaml  WorldEditorView.xaml.cs
Editor/Views/Windows/: ProjectsDialogView.xaml  ProjectsDialogView.xaml.cs
Engine/: CMakeLists.txt
Engine/common/: common.hpp  id.hpp  logger.hpp  platform.hpp  primitive_types.hpp  timer.cpp  timer.hpp
Engine/config/: config.cpp  config.hpp
Engine/content/: obj_parser.cpp  obj_parser.hpp  primitives.cpp  primitives.hpp
Engine/core/: entity.cpp  entity.hpp  geometry.cpp  geometry.hpp  scene.cpp  scene.hpp  script.cpp  script.hpp  transform.cpp  transform.hpp
Engine/graphics/: constants.hpp  gfx.hpp
Engine/graphics/cshaders/: ColorDirLight.hlsl  FlatShader.hlsl  OpaqueShader.hlsl
Engine/graphics/directX12/: d3dx12.h  dx_commands.cpp  dx_commands.hpp  dx_common.hpp  dx_device.cpp  dx_device.hpp  dx_graphics.cpp  dx_graphics.hpp  dx_graphics_core.cpp  dx_graphics_core.hpp  dx_pso.cpp  dx_pso.hpp  dx_render_info.cpp  dx_render_info.hpp  dx_render_layers.cpp  dx_render_layers.hpp  dx_root_signature.cpp  dx_root_signature.hpp  dx_utils.cpp  dx_utils.hpp  graphics_core.cpp  graphics_core.hpp  render_info.cpp  render_info.hpp
Engine/graphics/directX12/resources/: dx_buffer.cpp  dx_buffer.hpp  dx_deferring_system.cpp  dx_deferring_system.hpp  dx_descriptor_heap.cpp  dx_descriptor_heap.hpp  dx_resources.cpp  dx_resources.hpp  dx_upload_buffer.hpp
Engine/graphics/opengl/: gl_graphics_core.cpp  gl_graphics_core.hpp  gl_render_info.cpp  gl_render_info.hpp  gl_render_layers.cpp  gl_render_layers.hpp  graphics_core.cpp  graphics_core.hpp
Engine/graphics/opengl/shaders/: flatShader.fs  flatShader.vs  solidShader.fs  solidShader.vs
Engine/graphics/vulkan/: graphics_core.cpp  graphics_core.hpp  vk_graphics.cpp  vk_graphics.hpp  vk_graphics_core.hpp
Engine/input/: input.cpp  input.hpp
Engine/math/: math.hpp
Engine/math/unix/: functions.inl  matrix.hpp  scalar.hpp  vector.hpp
Engine/math/win32/: functions.inl  matrix.hpp  scalar.hpp  vector.hpp
Engine/render/: camera.cpp  camera.hpp  light.hpp  mesh.hpp  renderer.cpp  renderer.hpp  vertex.hpp  viewport.hpp
Engine/window/: window.hpp  window_info.hpp
Engine/window/glfw/: glfw.hpp
Engine/window/unix/: glfw.cpp
Engine/window/win32/: win32.cpp  win32.hpp  win_32.cpp  win_32.hpp
Sample/: CMakeLists.txt  main.cpp
Samples/: CMakeLists.txt
Samples/common/: Scripts.hpp  scripts.hpp
Samples/unix/: main.cpp
Samples/unix/vulkan/: main.cpp
Samples/win32/: main.cpp
Samples/win32/directX12/: main.cpp
Samples/win32/opengl/: main.cpp
Samples/win32/vulkan/: main.cpp
Test/: CMakeLists.txt  math.cpp  matrix_test.cpp  scalar_test.cpp  vector_test.cpp
Wrapper/: CMakeLists.txt  dllmain.cpp  wrapper.cpp
cmake/: extern.cmake  imgui.cmake  platform.cmake  source.cmake
cmake/backends/graphics/: directx12.cmake  opengl.cmake  vulkan.cmake
cmake/backends/window/: glfw.cmake  win32.cmake
common/: common.hpp  id.hpp  logger.cpp  logger.hpp  platform.hpp  primitive_types.hpp  string_literals.hpp  timer.cpp  timer.hpp  tuple.hpp  vector.hpp
config/: config.hpp
content/: content.hpp  obj_parser.cpp  obj_parser.hpp  primitives.cpp  primitives.hpp
core/: components.hpp  concepts.hpp  entity.cpp  entity.hpp  geometry.hpp  scene.cpp  scene.hpp  scene_graph.hpp  script.cpp  transform.cpp  transform.hpp
core/components/: component.hpp  components.hpp  concepts.hpp  geometry.cpp  geometry.hpp  light.hpp  metadata.cpp  metadata.hpp  pool.hpp  rigidbody.hpp  script.cpp  script.hpp  transform.cpp  transform.hpp
core/config/: config.hpp
core/pooling/: concepts.hpp  geometry_pool.hpp  light_pool.hpp  metadata_pool.hpp  pool.hpp  pool_detail.hpp  pools_map.hpp  rigidbody_pool.hpp  script_pool.hpp  transform_pool.hpp
graphics/: constants.hpp  gfx.hpp  shaders.hpp
graphics/directX12/: d3dx12.h  dx_adapter.hpp  dx_build_pso.hpp  dx_commands.cpp  dx_commands.hpp  dx_common.hpp  dx_gpass.cpp  dx_gpass.hpp  dx_graphics_core.cpp  dx_graphics_core.hpp  dx_pso.cpp  dx_pso.hpp  dx_render_element.hpp  dx_render_info.cpp  dx_render_info.hpp  dx_render_layers.cpp  dx_render_layers.hpp  dx_root_signature.cpp  dx_root_signature.hpp  dx_shader.hpp  dx_surface.cpp  dx_surface.hpp  dx_utils.cpp  dx_utils.hpp
graphics/directX12/resources/: concepts.hpp  (+17 more)
graphics/opengl/: gl_graphics_core.cpp  gl_graphics_core.hpp  gl_render_info.cpp  gl_render_info.hpp  gl_render_layers.cpp  gl_render_layers.hpp
graphics/vulkan/: vk_graphics_core.cpp  vk_graphics_core.hpp
input/: input.cpp  input.hpp  input_types.hpp
math/: math.hpp  utils.hpp
math/unix/: functions.hpp  functions.inl  matrix.hpp  scalar.hpp  vector.hpp
math/win32/: functions.hpp  functions.inl  matrix.hpp  scalar.hpp  vector.hpp
render/: camera.cpp  camera.hpp  light.cpp  light.hpp  material.hpp  mesh.hpp  renderer.hpp  vertex.hpp  viewport.hpp
window/: window.hpp  window_info.hpp
window/glfw/: glfw.cpp  glfw.hpp
window/win32/: win32.cpp  win32.hpp
x64/DebugEditor/: EngineDLL.exp  EngineDLL.lib
(+20 files in other folders)
